--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "algoliasearch": "^3.24.9",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "connect-ensure-login": "^0.1.1",
