--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.14.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
