--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express": "~4.15.5",
     "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
+    "lodash.where": "^3.1.0",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
     "nodemon": "^1.14.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "underscore": "^1.8.3"
   }
 }
